
        CHANGES IN spatstat.explore VERSION 3.0-0

OVERVIEW

    o New package

    o Fixing cross-references in help files
    
    o Package initialised at version 3.0-0.

SIGNIFICANT USER-VISIBLE CHANGES

    o Package structure
    The package 'spatstat.core' has been split into two packages called
    'spatstat.explore' (for exploratory data analysis)
    and 'spatstat.model' (for modelling and formal inference).

    o spatstat.explore
    The new package 'spatstat.explore' contains the code for
    exploratory data analysis and nonparametric analysis
    of spatial data. Examples include 'density.ppp', 'Kest',
    'envelope', 'rhohat', 'clarkevans.test'.

    o NEWS
    The NEWS file for the new package 'spatstat.explore'
    contains older news items from the defunct package 'spatstat.core'
    (for functions which are now in 'spatstat.explore').

    
        CHANGES IN spatstat.core VERSION 2.4-4.010

OVERVIEW

    o Internal improvements.


        CHANGES IN spatstat.core VERSION 2.4-4

OVERVIEW

    o Bug fixes and minor improvements.

BUG FIXES

    o rhohat.ppp
    The argument 'subset' was not handled correctly in the internal data.
    The estimated function 'rho' was correct, but if 'predict.rhohat' was applied,
    predictions were computed only in the 'subset', and were possibly incorrect values.
    Fixed.

    o Gfox, Jfox
    Warnings were issued about text formatting errors (mentioning 'sprintf' or 'fmt').
    Fixed.
    
        CHANGES IN spatstat.core VERSION 2.4-3

OVERVIEW

    o We thank Art Stock for contributions.
    
    o Bug fixes and minor improvements.

BUG FIXES

    o Smooth.ppp
    Crashed when 'kernel' was a function, 'at="points"' and 'scalekernel=FALSE'.
    Fixed.

    o Finhom, Ginhom, Jinhom
    Crashed when ratio=TRUE.
    [Spotted by Art Stock.]
    Fixed.
    
    o envelope
    Crashed for some of the summary functions when ratio=TRUE.
    [Spotted by Art Stock.]
    Fixed.

    o "[.rat"